--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100 border-2">
+<div class="navbar bg-base-100 ">
   <div class="flex-1">
     <a class="btn btn-ghost text-xl">ToPractice</a>
   </div>
