--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -1,68 +1,20 @@
 ---
-import SupabaseLogo from "../../public/Technologies/SupabaseLogo.svg";
-
 import tech from "../../jsons/technologies.json";
+import CardTechnology from "./CardTechnology.astro";
+
 ---
 
 <div class="grid grid-cols-3 m-5" id="containerCards">
   {
-    tech.map((tech: any) => (
-      <div class="max-w-sm border rounded-lg shadow bg-gray-800 border-gray-700 animate-fade">
-        <a href="#" class="flex items-center justify-center">
-          <img src={tech.logo} alt="" class="w-1/3 mt-5 hover:transition-transform hover:scale-110">
-        </a>
-        <div class="p-5">
-          <a href="#">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">
-              {tech.name}
-            </h5>
-          </a>
-          <p class="mb-3 font-normal text-gray-400">{tech.description}</p>
-        </div>
-      </div>
+    tech.map((tech) => (
+      <CardTechnology
+        id={tech.id}
+        name={tech.name}
+        description={tech.description}
+        logo={tech.logo}
+        hoverColor={tech.hoverColor}
+        link={tech.link || ""}
+      />
     ))
   }
 </div>
-
-<!-- <script>
-    // Ruta al archivo JSON
-    const jsonFile = "../../public/Technologies/technologies.json";
-
-    // Función para cargar y manejar el archivo JSON
-    async function loadJSON(file: string) {
-        try {
-            const response = await fetch(file);
-            const jsonData = await response.json();
-            
-            for (let i = 0; i < jsonData.technologies.length; i++) {
-                const card = document.createElement('div');
-                card.classList.add('card', 'max-w-sm', 'bg-base-100', 'shadow-xl', 'm-5', 'w-64', 'h-64', 'overflow-auto');
-
-                const cardBody = document.createElement('div');
-                cardBody.classList.add('card-body');
-
-                const cardTitle = document.createElement('h2');
-                cardTitle.classList.add('card-title');
-                cardTitle.textContent = jsonData.technologies[i].name;
-
-                const cardDescription = document.createElement('p');
-                cardDescription.textContent = jsonData.technologies[i].description;
-
-                cardBody.appendChild(cardTitle);
-                cardBody.appendChild(cardDescription);
-
-                card.appendChild(cardBody);
-
-                document.getElementById('containerCards')?.appendChild(card);
-
-
-            }
-
-        } catch (error) {
-            console.error('Error al cargar el archivo JSON:', error);
-        }
-    }
-
-    // Llamar a la función para cargar el archivo JSON
-    loadJSON(jsonFile);
-</script> -->
