--- a/src/components/CardTechnology.astro
+++ b/src/components/CardTechnology.astro
@@ -11,18 +11,30 @@ export interface Props {
 const { id, name, description, logo, hoverColor, link } = Astro.props;
 ---
 
-<div
-  class={`max-w-sm border rounded-lg shadow bg-gray-800 border-gray-700 animate-fade mb-5 sm:m-5 ${hoverColor}`}
->
+<div class={`max-w-sm border rounded-lg shadow bg-gray-800 border-gray-700 animate-fade mb-5 sm:m-5 ${hoverColor}`}>
+
   <a href={link} target="_blank" class="flex items-center justify-center">
-    <img src={logo} alt="" class="w-1/3 mt-5" />
+    <img src={logo} alt={name} class="w-1/3 mt-5 a" />
   </a>
+
   <div class="p-5">
-    <a href={link} target="_blank">
+    <a href={link} target="_blank" aria-label={name}>
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">{name}</h5>
     </a>
     <p class="mb-3 font-normal text-gray-400 hover:border-supabase">
       {description}
     </p>
   </div>
+
 </div>
+
+
+<style>
+  .a {
+    transition: all 0.2s ease-in-out;
+  }
+
+  .a:hover {
+    transform: scale(1.1);
+  }
+</style>
