--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,59 @@
 ---
-import NavBar from "../components/NavBar.astro"
-import Technologies from "../components/Technologies.astro"
+import NavBar from "../components/NavBar.astro";
+import Technologies from "../components/Technologies.astro";
+import TimeChart from "@components/TimeChart.astro";
+import Authors from "@components/Authors.astro";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<NavBar />
-
-		<Technologies />
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <NavBar />
+    <main class="w-full flex justify-center items-center flex-col">
+    
+      <div class="w-full flex justify-center items-center" id="tech">
+        <div class="w-5/6 bg-grayPerso">
+          <Technologies />
+        </div>
+      </div>
+    
+      <div class="w-full flex justify-center items-center bg-gray-800" id="time">
+        <div class="w-5/6 flex justify-center items-center">
+          <TimeChart />     
+        </div>
+      </div>
+      
+      <div class="w-full flex justify-center items-center" id="authors">
+        <div class="w-5/6 bg-grayPerso">
+          <Authors />
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
+
+
+
+<style>
+  /* Estilo de la barra de scroll */
+
+  body::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  body::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom right, #999999 0%, #999999 100%);
+    border-radius: 2px;
+  }
+
+  body::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(to bottom right, #777777 0%, #777777 100%);
+  }
+</style>
