--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -18,3 +18,13 @@ import CardTechnology from "./CardTechnology.astro";
     ))
   }
 </div>
+
+
+<style>
+  @media screen and (max-width: 640px) {
+    #containerCards {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+</style>
