--- a/src/components/AuthorCard.astro
+++ b/src/components/AuthorCard.astro
@@ -14,7 +14,7 @@ const { name, role, image, github, linkedin } = Astro.props;
   <div class="space-y-4 xl:space-y-6">
     <img
       class="mx-auto rounded-full h-36 w-36"
-      src="https://thispersondoesnotexist.com/image"
+      src={image}
       alt="author avatar"
     />
     <div class="space-y-2">
