--- a/src/components/Authors.astro
+++ b/src/components/Authors.astro
@@ -3,16 +3,25 @@ import AuthorCard from "./AuthorCard.astro";
 import authors from "../../jsons/authors.json";
 ---
 
-<div class="flex justify-center items-center m-10">
-    {
-        authors.map((author) => (
-            <AuthorCard
-                name={author.name}
-                role={author.role}
-                image={author.image}
-                github={author.github}
-                linkedin={author.linkedin}
-            />
-        ))
-    }
+<div class="flex justify-center items-center m-10" id="containerAuthors">
+  {
+    authors.map((author) => (
+      <AuthorCard
+        name={author.name}
+        role={author.role}
+        image={author.image}
+        github={author.github}
+        linkedin={author.linkedin}
+      />
+    ))
+  }
 </div>
+
+<style>
+  @media screen and (max-width: 640px) {
+    #containerAuthors {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+</style>
