--- a/src/components/CardTechnology.astro
+++ b/src/components/CardTechnology.astro
@@ -11,8 +11,10 @@ export interface Props {
 const { id, name, description, logo, hoverColor, link } = Astro.props;
 ---
 
-<div class={`max-w-sm border rounded-lg shadow bg-gray-800 border-gray-700 animate-fade mb-5 sm:m-5 ${hoverColor}`}>
-
+<div
+  class={`max-w-sm border rounded-lg shadow bg-gray-800 border-gray-700 animate-fade mb-5 sm:m-5 ${hoverColor}`}
+  id="card"
+>
   <a href={link} target="_blank" class="flex items-center justify-center">
     <img src={logo} alt={name} class="w-1/3 mt-5 a" />
   </a>
@@ -25,11 +27,16 @@ const { id, name, description, logo, hoverColor, link } = Astro.props;
       {description}
     </p>
   </div>
-
 </div>
 
-
 <style>
+  @media screen and (max-width: 640px) {
+    #card {
+      border: 1px solid black;
+      min-width: 100%;
+    }
+  }
+
   .a {
     transition: all 0.2s ease-in-out;
   }
