--- a/src/components/CardTechnology.astro
+++ b/src/components/CardTechnology.astro
@@ -8,7 +8,7 @@ export interface Props {
   link: string;
 }
 
-const { id, name, description, logo, hoverColor, link } = Astro.props;
+const { name, description, logo, hoverColor, link } = Astro.props;
 ---
 
 <div
