--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,6 +1,6 @@
 <div class="navbar bg-base-100 sticky top-0 z-50">
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl">ToPractice</a>
+    <a class="btn btn-ghost text-xl" target="_blank" href="https://to-practice.vercel.app/">ToPractice</a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1" id="menu">
