--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,4 +1,4 @@
-<section>
+<section id="home">
     <h1 class="centered">ToPractice</h1>
     <div class="air air1"></div>
     <div class="air air2"></div>
