--- a/src/components/Authors.astro
+++ b/src/components/Authors.astro
@@ -3,9 +3,7 @@ import AuthorCard from "./AuthorCard.astro";
 import authors from "../../jsons/authors.json";
 ---
 
-<div class="flex justify-center items-center m-10" id="containerAuthors"> 
-  <h1>a</h1>
-  <h1 class="text-3xl">Autores</h1>
+<div class="flex justify-center items-center m-10 h-screen" id="containerAuthors"> 
   {
     authors.map((author) => (
       <AuthorCard
