--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,26 +1,20 @@
-<div class="navbar bg-base-100 sticky top-0 z-50">
+<!-- <div class="navbar bg-base-100 sticky top-0 z-50">
   <div class="flex-1">
     <a class="btn btn-ghost text-xl" target="_blank" href="https://to-practice.vercel.app/">ToPractice</a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1" id="menu">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Description</a></li>
-      <li><a href="#">Concepts</a></li>
-      <li>
-        <a onclick="scrollToAnchor('#tech')" id="aTech"
-          >Technologies & Architecture</a
-        >
-      </li>
-      <li><a onclick="scrollToAnchor('#auhors')" id="aAuthors">Authors</a></li>
-      <li><a href="#">Conclusions</a></li>
+      <li><a onclick="scrollToAnchor('#home')" id="aHome">Home</a></li>
+      <li><a onclick="scrollToAnchor('#desc')" id="aDesc">Description</a></li>
+      <li><a onclick="scrollToAnchor('#tech')" id="aTech">Technologies & Architecture</a></li>
       <li><a onclick="scrollToAnchor('#time')" id="aTime">Time</a></li>
+      <li><a onclick="scrollToAnchor('#conc')" id="aConc">Conclusions</a></li>
+      <li><a onclick="scrollToAnchor('#auhors')" id="aAuthors">Authors</a></li>
     </ul>
   </div>
 
   <button class="burger-btn" id="burger-btn">&#9776;</button>
 
-  <!-- Nuevo menú desplegable -->
 
   <div>
     <ul class="menu-dropdown z-50 hidden" id="dropdown-menu">
@@ -38,12 +32,100 @@
     </ul>
   </div>
   
-</div>
+</div> -->
+<nav class="bg-base-100 sticky top-0 z-50">
+  <div
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+  >
+    <a
+      href="https://topractice.deno.dev/#/iniciar-sesions"
+      class="flex items-center space-x-3 rtl:space-x-reverse"
+    >
+      <span
+        class="self-center text-2xl font-semibold whitespace-nowrap text-white"
+        >ToPractice</span
+      >
+    </a>
+    <button
+      data-collapse-toggle="navbar-default"
+      type="button"
+      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden focus:outline-none focus:ring-2 text-gray-400 hover:bg-gray-700 focus:ring-gray-600"
+      aria-controls="navbar-default"
+      aria-expanded="false"
+    >
+      <span class="sr-only">Open main menu</span>
+      <svg
+        class="w-5 h-5"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 17 14"
+      >
+        <path
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M1 1h15M1 7h15M1 13h15"></path>
+      </svg>
+    </button>
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul
+        class="font-medium flex flex-col p-4 md:p-0 mt-4 border rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 border-gray-700"
+      >
+        <li>
+          <a onclick="scrollToAnchor('#home')" id="aHome" class="cursor-pointer"
+            >Home</a>
+        </li>
+        <li>
+          <a onclick="scrollToAnchor('#desc')" id="aDesc" class="cursor-pointer"
+            >Description</a>
+        </li>
+        <li>
+          <a onclick="scrollToAnchor('#tech')" id="aTech" class="cursor-pointer"
+            >Technologies & Architecture</a
+          >
+        </li>
+        <li>
+          <a onclick="scrollToAnchor('#time')" id="aTime" class="cursor-pointer"
+            >Time</a>
+        </li>
+        <li>
+          <a onclick="scrollToAnchor('#conc')" id="aConc" class="cursor-pointer"
+            >Conclusions</a>
+        </li>
+        <li>
+          <a
+            onclick="scrollToAnchor('#auhors')"
+            id="aAuthors"
+            class="cursor-pointer">Authors</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <script>
   const aTime = document.getElementById("aTime") as HTMLAnchorElement;
   const aTech = document.getElementById("aTech") as HTMLAnchorElement;
   const aAuthors = document.getElementById("aAuthors") as HTMLAnchorElement;
+  const aDesc = document.getElementById("aDesc") as HTMLAnchorElement;
+  const aConc = document.getElementById("aConc") as HTMLAnchorElement;
+  const aHome = document.getElementById("aHome") as HTMLAnchorElement;
+
+  const button = document.querySelector("[data-collapse-toggle]");
+  const menu = document.getElementById("navbar-default");
+
+  if (button && menu) {
+    button.addEventListener("click", function () {
+      const expanded = button.getAttribute("aria-expanded") === "true" || false;
+
+      //button.setAttribute("aria-expanded", !expanded);
+      
+      menu.classList.toggle("hidden");
+    });
+  }
 
   aAuthors.addEventListener("click", () => {
     scrollToAnchor("#authors");
@@ -57,6 +139,18 @@
     scrollToAnchor("#tech");
   });
 
+  aDesc.addEventListener("click", () => {
+    scrollToAnchor("#desc");
+  });
+
+  aConc.addEventListener("click", () => {
+    scrollToAnchor("#conc");
+  });
+
+  aHome.addEventListener("click", () => {
+    scrollToAnchor("#home");
+  });
+
   function scrollToAnchor(anchorId: any) {
     const target = document.querySelector(anchorId);
     if (target) {
@@ -66,15 +160,6 @@
       });
     }
   }
-
-  const burgerBtn = document.getElementById("burger-btn");
-  const menu = document.getElementById("menu");
-  const dropdownMenu = document.getElementById("dropdown-menu");
-
-  burgerBtn?.addEventListener("click", () => {
-    menu?.classList.toggle("hidden");
-    dropdownMenu?.classList.toggle("hidden");
-  });
 </script>
 
 <style>
@@ -83,7 +168,7 @@
       display: none;
     }
 
-    #burger-btn{
+    #burger-btn {
       display: block;
     }
   }
