Retoques del chart

--- a/src/components/Description.astro
+++ b/src/components/Description.astro
@@ -15,3 +15,12 @@
     >
   </div>
 </div>
+
+
+<style>
+  @media screen and (min-width: 300px) {
+    h1{
+      font-size: 3em;
+    }
+  }
+</style>
