--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,6 +100,10 @@ import Conclustion from "@components/Conclustion.astro";
     #timeDiv {
       width: 100% !important;
     }
+
+    h1{
+      font-size: 3em;
+    }
   }
 
 
